# primesocket

./: .env.example  .gitignore  LICENSE  README.md  makefile  requirements-lint.txt  requirements.txt  setup.py
.github/workflows/: code_quality.yml
config/make/: setup-lint.cfg
primesocket/: __init__.py  client.py  client_sieve.py  main.py  multiple_clients.py  server.py
primesocket-core/: Cargo.toml  pyproject.toml
primesocket-core/src/: client.rs  lib.rs
primesocket-core/src/client/: client.rs  mod.rs  request_handler.rs
primesocket-core/src/server/: mod.rs  request_handler.rs  response_handler.rs  server.rs  server_state.rs
primesocket-core/src/utils/: json.rs  mod.rs  sieve.rs
