[package]
name = "primesocket-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "primesocket_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = "debuginfo"
rpath = false
incremental = false
